vscodeserver/vscode-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  labels:
    app: code-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: codercom/code-server
          ports:
            - containerPort: 80
          volumeMounts:
            - name: code-storage
              mountPath: /home/coder/project
      volumes:
        - name: code-storage
          persistentVolumeClaim:
            claimName: code-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  type: LoadBalancer
  externalIPs:
  - 192.168.58.2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: code-server
