vscodeserver/code-server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - cloudwithsk.tk
    secretName: code-server-tls
  rules:
  - host: cloudwithsk.tk
    http:
      paths:
      - path: /code-server(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: code-server
            port:
              number: 80
